# dgm-2026.1

./: .gitmodules  QUICKSTART.md  README.md
projects/multimodal-pothole-detection/: .gitignore  README.md  pyproject.toml
projects/multimodal-pothole-detection/configs/: train_config_v1.json  train_config_v2.json  train_config_v3.json  train_config_v4.json  train_config_v5.json  train_config_v6.json  train_config_v7.json
projects/multimodal-pothole-detection/notebooks/: 2D_to_3D_exploration.ipynb  EDA.ipynb  baseline_inference_visual.ipynb  preprocessing_visualization.ipynb
projects/multimodal-pothole-detection/notebooks/from_kaggle_poth/: chanakarnc-thanawatw.ipynb  dinov2-adapteddataset.ipynb  pothole-vol.ipynb
projects/multimodal-pothole-detection/reports/: latency_results.json  pothrgbd_eda_summary.json  pothrgbd_summary.json  rui_fan_summary.json
projects/multimodal-pothole-detection/reports/final_test_eval/: evaluation_report_test.csv  summary.json
projects/multimodal-pothole-detection/reports/final_val_eval/: evaluation_report_val.csv  summary.json
projects/multimodal-pothole-detection/src/data/: __init__.py  generate_point_e_dataset.py  pothole_dataset.py
projects/multimodal-pothole-detection/src/evaluation/: chamfer.py  evaluate_3d.py  final_test_eval.py
projects/multimodal-pothole-detection/src/models/: point_e_model.py  predict_batch.py  train_engine.py
projects/multimodal-pothole-detection/src/scripts/: cleanup_sync.py  explore_pothrgbd_sample.py  inspect_datasets.py  point_e_pipeline_utils.py  pothole_geometry.py  predict_single.py  prepare_rui_fan_testset.py  run_final_test_evaluation.py  run_final_test_inference.py  run_latency_test.py  run_training.py
(+248 files in other folders)
