[tool.poetry]
name = "multimodal-pothole-detection"
version = "0.1.0"
description = "Deep learning project for pothole 2D-to-3D reconstruction and notebook exploration."
authors = ["Adriel, Hasnat, Nicholas"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.0.0"
pandas = "^2.2.0"
matplotlib = "^3.9.0"
pillow = "^10.4.0"
scipy = "^1.14.0"
jupyterlab = "^4.2.0"
ipykernel = "^6.29.0"
open3d=">=0.19.0"
opencv-python = ">=4.7.0"
torch = {version = "^2.11.0", source = "pytorch"}
torchvision = {version = "^0.26.0", source = "pytorch"}
torchaudio = {version = "^2.11.0", source = "pytorch"}
point-e = { git = "https://github.com/openai/point-e.git" }
albumentations = "^2.0.8"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"